# Skillgate

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/docs_only/: CONTRIBUTING.md  README.md
examples/python_pytest_minimal/: README.md  pyproject.toml
examples/real_skills/: requests.yaml
examples/real_skills/bug_fix/: SKILL.md
schemas/: clarification_answers.v2.schema.json  clarifications.v2.schema.json  decision.v1.schema.json  input_slot_state.v1.schema.json  normalized_skill_input.v1.schema.json  recompile.v2.schema.json  skill_input_contract.v1.schema.json  skill_input_contract.v2.schema.json  skill_input_contract.v3.schema.json
skillgate/: __init__.py  capabilities.py  clarification.py  cli.py  compiler.py  constants.py  context.py  discovery.py  draft.py  draft_lifecycle.py  json_schema.py  llm_auditor.py  render.py  rules.py  schema.py  skill_auditor.py
skillgate/baselines/: __init__.py  rule_auditor.py
skills/skillgate-preactivation/: SKILL.md
tests/: __init__.py  test_audit_fixes.py  test_clarification.py  test_cli_core.py  test_context.py  test_discovery.py  test_draft.py  test_golden_decisions.py  test_json_schema.py  test_v3_schema.py
tests/core/: __init__.py  test_llm_auditor_mock.py  test_real_skill_examples_mock.py
tests/fixtures/: p0_golden_requests.yaml
(+83 files in other folders)
